modules/security_groups/main.tf
data "aws_vpc" "dev_vpc" {
  tags = {
    Name = "dev"
  }
}

resource "aws_security_group" "alb" {
  name   = "${var.env}-sg-alb"
  vpc_id = data.aws_vpc.dev_vpc.id
  tags = {
    Name = "Webserver-${var.env}-lb"
  }

  ingress {
    protocol         = "tcp"
    from_port        = 80
    to_port          = 80
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  ingress {
    protocol         = "tcp"
    from_port        = 443
    to_port          = 443
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    protocol         = "-1"
    from_port        = 0
    to_port          = 0
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
}

resource "aws_security_group" "ecs_tasks" {
  name   = "${var.env}-sg-task"
  vpc_id = data.aws_vpc.dev_vpc.id
  tags = {
    Name = "Webserver-${var.env}-tasks"
  }

  ingress {
    protocol         = "tcp"
    from_port        = var.container_port
    to_port          = var.container_port
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    protocol         = "-1"
    from_port        = 0
    to_port          = 0
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
}
